# langsmith-extractor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.agent-os/instructions/custom/: always-lint-after-changes.md  no-auto-commits.md
.agent-os/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agent-os/product/recaps/: 2025-09-03-phase-5-zenrows-detail-completion.md  2025-09-09-phase-6-evaluation-completion.md
.agent-os/specs/2025-08-29-cli-structure/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-29-langsmith-api-integration/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-08-29-zenrows-error-reporting/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-09-03-standardize-single-date-parameters/: spec.md  tasks.md
.agent-os/specs/2025-09-03-zenrows-errors-detail-report/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-09-04-zenrows-error-categorization/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/2025-09-06-url-pattern-analysis/: spec-lite.md  spec.md  tasks.md
.agent-os/specs/fix-zenrows-error-detection/: README.md  (+1 more)
.github/workflows/: README.md  ci.yml
alembic/: env.py
alembic/versions/: 9405a9ff216f_create_runs_table_with_jsonb_data_.py
lse/: __init__.py  analysis.py  archive.py  cli.py  client.py  config.py  data_fetcher.py  data_storage.py  database.py  drive.py  error_categories.py  evaluation.py  exceptions.py  formatters.py  retry.py  storage.py  timezone.py  utils.py
lse/commands/: __init__.py  archive.py  eval.py  fetch.py  report.py
scripts/: setup-database.sh  teardown-database.sh
tests/: test_analysis.py  test_analysis_categorization.py  test_cli.py  test_config.py  test_database.py  test_dataset_format.py  test_error_categories.py  test_eval_command.py  test_evaluation.py  test_evaluation_extraction.py  test_fetch_command.py  test_formatters.py  test_formatters_categorization.py  test_integration.py  test_phase18_integration.py  test_project_structure.py  test_report_command.py  test_utils.py  test_zenrows_detail_analysis.py
(+35 files in other folders)
