[project]
name = "langsmith-extractor"
version = "0.1.0"
description = "CLI tool for extracting and analyzing LangSmith trace data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "langsmith>=0.1.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.149.0",
    "httpx>=0.25.0",
]

[project.scripts]
lse = "lse.cli:app"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.setuptools.packages.find]
include = ["lse*"]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.11",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
async = [
    "aiohttp>=3.8.0",
]
test = [
    "pytest-asyncio>=0.21.0",
]
